--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <hr>
             <p>Product landing page for the boardgame "Scythe", build for
             freeCodeCamp's Responsive Web Design Certification. Although a
-            fairly simple project it was a useful practie of my HTML, CSS and
+            fairly simple project it was a useful practice of my HTML, CSS and
             responsive web design skills.</p>
             <div class="skills">
               <div class="skill_button">HTML</div>
