Spending Tracker added to portfolio

--- a/index.html
+++ b/index.html
@@ -69,6 +69,37 @@
       <h2>&mdash;Portfolio&mdash;</h2>
       <div id="portfolio_container">
         <p>Here are a few of the things I've been working on recently. Watch this space for updates and check out my <a href="https://github.com/DafyddLlyr" target="_blank">GitHub</a>.</p>
+
+        <div class="card reverse">
+          <div class="card_img">
+            <a href="https://github.com/DafyddLlyr/Spending_Tracker">
+            <img class="responsive_img" alt="spending-tracker-screenshot" src="./images/spending_tracker.png">
+            </a>
+          </div>
+          <div class="card_text">
+            <h3>Spending Tracker</h3>
+            <h4>CodeClan Solo Project</h4>
+            <hr>
+            <p>A spending tracker which offers insights into spending to allow users to better control their finances. First solo CodeClan project, completed in week 5.</p>
+            <p> Features include -
+              <ul>
+                <li> Dynamic insights into the users’ spending  patterns</li>
+                <li>Add and manage transactions, merchants and categories</li>
+                <li>Users can "round up" transactions and add this to a savings pot</li>
+                <li>Dashboard view allowing users an overview of their spending on one page</li>
+              </ul>
+            <div class="skills">
+              <div class="skill_button">Ruby</div>
+              <div class="skill_button">SQL</div>
+              <div class="skill_button">Sinatra</div>
+              <div class="skill_button">PostgreSQL</div>
+              <div class="skill_button">HTML</div>
+              <div class="skill_button">CSS</div>
+            </div>
+          </div>
+        </div>
+
+
         <div class="card">
           <div class="card_img">
             <a href="https://codepen.io/DafyddLlyr/full/mgQNwE" target="_blank">
