Added World Quiz to portfolio

--- a/index.html
+++ b/index.html
@@ -70,6 +70,38 @@
         <div id="portfolio_container">
           <p>Here are a few of the things I've been working on recently. Watch this space for updates and check out my <a href="https://github.com/DafyddLlyr" target="_blank">GitHub</a>.</p>
 
+          <div class="card reverse">
+            <div class="card_img">
+              <a href="https://github.com/DafyddLlyr/World_Quiz" target="_blank">
+                <img class="responsive_img" alt="World Quiz Screenshot" src="./images/world_quiz.png">
+              </a>
+            </div>
+            <div class="card_text">
+              <h3>World Quiz</h3>
+              <h4>CodeClan Group Project</h4>
+              <hr>
+              <p>Travel the globe in this interactive and educational quiz game, where learners can improve their knowledge of flags, capitals, currencies and continents. A full stack web-app build as a group project in Week 8</p>
+              <p> Features include -
+                <ul>
+                  <li> Users can build up a profile to track which countries they know well (and those they don't!)</li>
+                  <li>Fully explorable globe implemented with WebGL Earth</li>
+                  <li>All questions, answers, and quiz topics are build dynamically from the API and are not hardcoded</li>
+                </ul>
+              <div class="skills reverse">
+                <div class="skill_button">MongoDB</div>
+                <div class="skill_button">Vue.js</div>
+                <div class="skill_button">Google Charts</div>
+                <div class="skill_button">WebGL Earth</div>
+                <div class="skill_button">CSS</div>
+                <div class="skill_button">Express.js</div>
+                <div class="skill_button">JavaScript</div>
+                <div class="skill_button">HTML</div>
+                <div class="skill_button">API</div>
+              </div>
+            </div>
+          </div>
+
+
           <div class="card">
             <div class="card_img">
               <a href="https://github.com/DafyddLlyr/Homework_Wk07D5_International_Beer_Tracker" target="_blank">
@@ -81,7 +113,7 @@
               <h4>CodeClan</h4>
               <hr>
               <p>Built in a weekend using Vue.js, Leaflet, Google Charts, <a href="https://public-us.opendatasoft.com/explore/dataset/open-beer-database/information/" target="_blank">Open Beer Database API</a> and the <a href="https://restcountries.eu/" target="_blank">RESTCountries API</a>.</p>
-              <p>Beers can be filtered on the map by style, category, country or brewery. A random beer can also be selected and the map will fly to that location. Further insight and analysis into these categories is given when a beer is clicked on.</p>
+              <p>Beers can be filtered on the map by style, category, country or brewery. A random beer can also be selected and the map will fly to that location. Further insight and analysis into these categories is given when a beer is selected.</p>
               <div class="skills">
                 <div class="skill_button">HTML</div>
                 <div class="skill_button">CSS</div>
