--- a/cv.html
+++ b/cv.html
@@ -46,7 +46,7 @@
               <i class="fab fa-codepen"></i></a>
             <a href="mailto:dafyddllyr@gmail.com" target="_blank">
               <i class="far fa-envelope"></i></a>
-            <a href="https://www.linkedin.com/in/dafydd-pearson-045445131/" target="blank">
+            <a href="https://www.linkedin.com/in/dafyddpearson" target="blank">
               <i class="fab fa-linkedin"></i></a>
             <a href="https://www.facebook.com/dafyddllyr" target="_blank">
               <i class="fab fa-facebook-square"></i></a>
@@ -140,7 +140,7 @@
             <i class="fab fa-codepen"></i></a>
           <a href="mailto:dafyddllyr@gmail.com" target="_blank">
             <i class="far fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/dafydd-pearson-045445131/" target="blank">
+          <a href="https://www.linkedin.com/in/dafyddpearson" target="blank">
             <i class="fab fa-linkedin"></i></a>
           <a href="https://www.facebook.com/dafyddllyr" target="_blank">
             <i class="fab fa-facebook-square"></i></a>
