--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <ul>
                   <li> Users can build up a profile to track which countries they know well (and those they don't!)</li>
                   <li>Fully explorable globe implemented with WebGL Earth</li>
-                  <li>All questions, answers, and quiz topics are build dynamically from the API and are not hardcoded</li>
+                  <li>All questions, answers, and quiz topics are built dynamically from the API and are not hardcoded</li>
                 </ul>
                 <div class="skills reverse">
                   <div class="skill_button">MongoDB</div>
@@ -158,7 +158,7 @@
                 <h3>World Facts App</h3>
                 <h4>CodeClan</h4>
                 <hr>
-                <p>An app which displays country data from an the <a href="https://restcountries.eu" target="_blank">RESTCountries API</a>, built with multiple Vue.js components. Features include search with autocomplete, random country selection, and accessing neighbouring countries.</p>
+                <p>An app which displays country data from the <a href="https://restcountries.eu" target="_blank">RESTCountries API</a>, built with multiple Vue.js components. Features include search with autocomplete, random country selection, and accessing neighbouring countries.</p>
                 <div class="skills">
                   <div class="skill_button">HTML</div>
                   <div class="skill_button">CSS</div>
