Added PDF CV and fixed links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
           <li><a href="#profile">About</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="./cv.html">CV</a></li>
+          <li><a href="./Dafydd Pearson.pdf">CV</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -104,7 +104,7 @@
 
             <div class="card">
               <div class="card_img">
-                <a href="https://github.com/DafyddLlyr/Homework_Wk07D5_International_Beer_Tracker" target="_blank">
+                <a href="https://github.com/DafyddLlyr/International_Beer_Tracker" target="_blank">
                   <img class="responsive_img" alt="Beer Tracker Screenshot" src="./images/beer_tracker.png">
                 </a>
               </div>
@@ -128,7 +128,7 @@
 
             <div class="card reverse">
               <div class="card_img">
-                <a href="https://github.com/DafyddLlyr/Lab_Wk07D4_Energy_Mix" target="_blank">
+                <a href="https://github.com/DafyddLlyr/Energy_Mix" target="_blank">
                   <img class="responsive_img" alt="Energy Mix Screenshots" src="./images/energy_mix.png">
                 </a>
               </div>
