Added HikeBuddy Project and updated CV

--- a/index.html
+++ b/index.html
@@ -70,6 +70,41 @@
         <div id="portfolio_container">
           <p>Here are a few of the things I've been working on recently. Watch this space for updates and check out my <a href="https://github.com/DafyddLlyr" target="_blank">GitHub</a>.</p>
 
+          <div class="card">
+            <div class="card_img">
+              <a href="https://github.com/DafyddLlyr/HikeBuddy" target="_blank">
+                <img class="responsive_img" alt="" src="./images/hikebuddy.png">
+              </a>
+            </div>
+            <div class="card_text">
+              <h3>HikeBuddy</h3>
+              <h4>CodeClan Group Project</h4>
+              <hr>
+              <p>Plan your hike on the Scottish National Trail - create routes, track your progress and explore points of interest along the trail.</p>
+              <p>Full-stack app with a Java/Spring RESTful API and a React frontend.</p>
+              <p>Features include - </p>
+              <ul>
+                <li>Create hiking routes on an interactive Leaflet map which uses Turf.js to calculate length of section using GeoJSON data</li>
+                <li>Add and remove favourite locations</li>
+                <li>Track route completion progress and view suggested locations</li>
+                <li>Admin can add & remove locations from database</li>
+              </ul>
+              </p>
+              <div class="skills">
+                <div class="skill_button">Java</div>
+                <div class="skill_button">Spring</div>
+                <div class="skill_button">Hibernate</div>
+                <div class="skill_button">React</div>
+                <div class="skill_button">HTML</div>
+                <div class="skill_button">CSS</div>
+                <div class="skill_button">JavaScript</div>
+                <div class="skill_button">Leaflet</div>
+                <div class="skill_button">Turf.js</div>
+                <div class="skill_button">PostgreSQL</div>
+              </div>
+            </div>
+          </div>
+
           <div class="card reverse">
             <div class="card_img">
               <a href="https://github.com/DafyddLlyr/World_Quiz" target="_blank">
