Updated hikebuddy text

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
               <h3>HikeBuddy</h3>
               <h4>CodeClan Group Project</h4>
               <hr>
-              <p>Plan your hike on the Scottish National Trail - create routes, track your progress and explore points of interest along the trail.</p>
-              <p>Full-stack app with a Java/Spring RESTful API and a React frontend.</p>
+              <p>Plan your hike on the Scottish National Trail - create routes, track your progress and explore points of interest along the trail. Full-stack app with a Java/Spring RESTful API and a React frontend.</p>
               <p>Features include - </p>
               <ul>
                 <li>Create hiking routes on an interactive Leaflet map which uses Turf.js to calculate length of section using GeoJSON data</li>
